[package]
name = "built_different"
authors = ["Andrej Orsula <orsula.andrej@gmail.com>"]
categories = ["development-tools::build-utils"]
description = "Utilities for Rust build scripts"
edition = "2021"
keywords = ["build"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AndrejOrsula/built_different"
rust-version = "1.74"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
compress-tools = { version = "0.15" }
diffy = { version = "0.4" }
dirs = { version = "5" }
reqwest = { version = "0.12" }
tokio = { version = "1.39", features = ["rt-multi-thread"] }
walkdir = { version = "2" }

[lib]
name = "built_different"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "create_patches"
path = "src/bin/create_patches.rs"
